fix flex wrap

--- a/src/pages/course/course.scss
+++ b/src/pages/course/course.scss
@@ -109,6 +109,7 @@
         display: flex;
         align-items: center;
         flex-direction: row;
+        flex-wrap: wrap;
     }
 
     .fc-toolbar-chunk {
