--- a/src/pages/room/room.scss
+++ b/src/pages/room/room.scss
@@ -19,6 +19,7 @@
         display: flex;
         align-items: center;
         flex-direction: row;
+        flex-wrap: wrap;
     }
 
     .fc-toolbar-chunk {
