--- a/src/pages/studyplan/studyplan.scss
+++ b/src/pages/studyplan/studyplan.scss
@@ -66,6 +66,7 @@
         display: flex;
         align-items: center;
         flex-direction: row;
+        flex-wrap: wrap;
     }
 
     .fc-toolbar-chunk {
